<resources>
    <string name="app_name">NoPhish</string>
    <string name="action_restart">Restart</string>
    <string name="title_activity_awareness">E-Mail Fälschung</string>
	<string name="title_activity_credits">Credits</string>
    <string name="end_app">App beenden</string>
    <string name="end_app_text">Möchtest du die App wirklich beenden?</string>
    <string name="end_app_yes">Ja</string>
    <string name="end_app_no">Nein</string>
    <string name="reset_app">Reset</string>
    <string name="reset_app_text">Möchtest du die App wirklich zurücksetzen? \nHierbei geht sämtlicher Fortschritt verloren. \n\nDie App startet innerhalb weniger Sekunden neu.</string>
    <string name="start_menu">Lerne, dich gegen die Internetgefahr \"Phishing\" zu schützen!</string>
    <string name="sign_out">Sign Out</string>
    <string name="button_play">Spielen</string>
    <string name="button_play_on">Weiterspielen</string>
    <string name="button_level_overview">Levels</string>
    <string name="button_more_info">Mehr Informationen</string>
    <string name="button_about">Über uns</string>
    <string name="button_show_online_achievement">Deine Erfolge</string>
    <string name="button_show_leaderboard_rate">Leaderboard Rate</string>
    <string name="button_show_leaderboard_total">Leaderboard Found Phishes</string>
	<string name="button_show_leaderboard_total_points">Highscore</string>
	<string name="button_delete_remote_data">Online Spielstand Löschen</string>
	<string name="button_show_snapshots">Alle Snapshots anzeigen</string>
    <string name="google_plus_text">Wenn du deine Spielleistungen mit deinen Freunden auf google+ teilen willst und deinen Spielstand online speichern möchtest, melde dich mit Google+ an.</string>
    <string name="google_plus_disclaimer">Bitte beachte, dass es zur zeit nicht möglich ist die Leistungen und Ranglistenpositionen zu löschen. Der Spielstand kann gelöscht werden.</string>
    <string name="google_plus_data_deleted">Dein online Spielstand wurde gelöscht.</string>
    <string name="google_plus_snapshot_load_problem">Es gab ein Problem beim laden deines Spielstandes:</string>
    <string name="google_plus_snapshot_load_ok">Dein online Spielstand wurde geladen.</string>
    <string name="button_social">Google Play</string>
    <string name="button_reset">Alles zurücksetzen</string>
    <string name="button_credits">Credits</string>
    <string name="button_quiz">Tests zum Wissensstand</string>
    <string name="button_close">App beenden</string>
    <string name="quiz_text">Hier findest du drei Links, mit Hilfe dessen du deinen Wissensstand zu Phishing testen kannst. \nDiese Tests sind besser am Tablet durchzuführen (wegen der Darstellung der Beispiele). \n\nBei Klicken auf die Quiz-Links wirst du auf die Webseite von SoSciSurvey weitergeleitet. SoSciSurvey wurde zur Durchführung von Onlinebefragung im wissenschaftlichen Kontext konzipiert und ermöglicht die gleichzeitige Evaluation und damit Verbesserung von NoPhish.</string>
    <string name="info_apwg">Anti-Phishing Working Group</string>
    <string name="info_security_comic">Comics zu Phishing</string>
    <string name="info_how_phishing_works">Wie Phishing funktioniert</string>
    <string name="url_apwg">http://www.antiphishing.org</string>
    <string name="url_securitycomic">http://www.securitycartoon.com</string>
    <string name="url_how_phishing_works">http://computer.howstuffworks.com/phishing.htm</string>
    <string name="more_info_text">Hier findest du eine Sammlung mit externen Links zum Thema Phishing. Diese erhebt nicht den Anspruch vollständig zu sein.</string>
    <string name="about_text">Diese App wurde von der Forschungsgruppe SECUSO  der TU Darmstadt entwickelt. Die erste Version dieser App wurde von Clemens Bergmann und Gamze Canova im Rahmen ihrer Masterarbeit entwickelt. Diese App wurde anhand von Benutzerstudien evaluiert und basierend auf den Ergebnissen der Evaluationen weiterentwickelt. Die Änderungen wurden von Philipp Rack durchgeführt.</string>
    <string name="about_contact"><b>Technische Universität Darmstadt</b>\nFachbereich Informatik\nFachgebiet Security, Usability &amp; Society\nLeitung: Prof. Dr. Melanie Volkamer\nGebäude S4|14\nMornewegstr. 30\n64293 Darmstadt\n\nE-Mail: kontakt@secuso.org</string>
    <string name="level_title_00">Einführung 1</string>
    <string name="level_title_01">Einführung 2</string>
    <string name="level_title_02">Level 1</string>
    <string name="level_title_03">Level 2</string>
    <string name="level_title_04">Level 3</string>
    <string name="level_title_05">Level 4</string>
    <string name="level_title_06">Level 5</string>
    <string name="level_title_07">Level 6</string>
    <string name="level_title_08">Level 7</string>
    <string name="level_title_09">Level 8</string>
    <string name="level_title_10">Level 9</string>
    <string name="level_title_11">Schlussbemerkungen</string>
    <string name="level_subtitle_00">Phishing</string>
    <string name="level_subtitle_01">Die Statuszeile</string>
    <string name="level_subtitle_02">Struktur von Webadressen</string>
    <string name="level_subtitle_03">IP-Adresse</string>
    <string name="level_subtitle_04">Zufällige Gesrächspartner</string>
    <string name="level_subtitle_05">Bereich der Abteilung</string>
    <string name="level_subtitle_06">Bereich des Gesprächsthemas</string>
    <string name="level_subtitle_07">Ergänzungen</string>
    <string name="level_subtitle_08">Tippfehler</string>
    <string name="level_subtitle_09">Ähnliche Zeichen</string>
    <string name="level_subtitle_10">Die Sicherheitsstufe</string>
    <string name="level_subtitle_11">Tricks &amp; Hinweise</string>
    <string name="level_03_splash_subtitle">Gesprächspartner kommt in der Webadresse überhaupt nicht vor</string>
    <string name="level_04_splash_subtitle">IP-Adresse als Wer-Bereich</string>
    <string name="level_05_splash_subtitle">Ähnliche Gesprächspartner im Bereich der Abteilungen</string>
    <string name="level_06_splash_subtitle">Ähnliche Gesprächspartner im Gesprächsthema-Bereich</string>
    <string name="level_07_splash_subtitle">Ähnliche Gesprächspartner im Wer-Bereich</string>
    <string name="level_08_splash_subtitle">Tippfehler/Buchstabendreher im Wer-Bereich</string>
    <string name="level_09_splash_subtitle">Ähnliche Zeichen im Wer-Bereich.</string>
    <string name="level_10_splash_subtitle">Der Bereich der Sicherheitsstufe</string>
    <string name="level_11_splash_subtitle">Tricks &amp; Hinweise</string>
    <string name="level_11_splash_01_subtitle">Verwirrende Webadressen</string>
    <string name="level_11_splash_02_subtitle">Zusatz zu https://</string>
    <string name="level_11_splash_03_subtitle">Gefahren beim Anklicken von Links</string>
    <string name="level_11_splash_04_subtitle">Weitere Tricks</string>
    <string name="awareness_text_hint">Hier kannst du einen beliebigen Text eingeben, der in  der E-Mail erscheinen soll.</string>
    <string name="awareness_email_hint">Bitte gib an dieser Stelle eine möglichst authentische (oder bereits existierende) E-Mail Adresse ein, die als Absender erscheinen soll.</string>
    <string name="btn_send">Abschicken</string>
    <string name="hint_text">Hier Text eingeben.</string>
    <string name="awareness_missing_email_sender_or_receiver">Bitte Absender und Empfänger eingeben.</string>
    <string name="awareness_invalid_email">Die Absender oder Empfänger E-Mail ist ungültig. Bitte überprüfe deine Eingaben.</string>
    <string name="awareness_email_sent">E-Mail versandt</string>
    <string name="awareness_alert_message">Nun überprüfe bitte deine E-Mails über dein Smartphone. Du solltest eine gefälschte E-Mail bekommen haben. Lese diese gründlich. Über diese kommst du dann zurück in die App.</string>
    <string name="awareness_second_alert_message">Bitte beachte, dass das Ankommen der E-Mail einige Minuten dauern kann. Ggf. musst du auch in deinem Junk/Spam-Ordner nachsehen. Sollte die E-Mail dennoch nicht ankommen, dann gib bitte eine andere Absender-Adresse ein.</string>
    <string name="awareness_resend_email">E-Mail nicht erhalten</string>
    <string name="awareness_to_mail">Zur Mail Anwendung</string>
    <string name="awareness_skip">Überspringen</string>
    <string name="http">http://</string>
    <string name="domain_spiegel">spiegel</string>
    <string name="subdomain">abo</string>
    <string name="path_dot_dot_dot">/&#8230;</string>
    <string name="domain_de">de</string>
    <string name="dot">.</string>
    <string name="slash">/</string>
    <string name="level_01_intro_00_text_01">Der Wer-Bereich ist der wichtigste Bereich für die Erkennung von Phishing URLs. In der Fachsprache wird er Domain genannt. Üblicherweise wird diese in der Statuszeile angezeigt.\n\nAn mobilen Geräten (Smartphones und Tablets) hängt das Vorgehen zum Identifizieren der Webadresse, die hinter einem Link steckt, allerdings stark vom Gerät ab. Meist ist es so, dass du für etwa 2 Sekunden leicht auf den Link drücken musst, ihn dabei jedoch nicht klicken.\n\nIm Folgenden sind die beiden meist vertretenen Systeme, Android und iOS, dargestellt.</string>
    <string name="level_01_intro_00_button_01">Das kann ich schon!</string>
    <string name="level_01_intro_03_text_01"><b>Die Webadresse vollständig ansehen</b>\n\nDies hat zur Folge, dass die Webadresse markiert wird und du das Ende der Webadresse siehst.</string>
    <string name="level_01_intro_03_text_02">Jetzt musst du die Webadresse mit dem Finger nach rechts ziehen (ggf. mehrmals), bis du am Anfang der Webadresse angelangt bist.</string>
    <string name="level_01_intro_03_text_03">Durch das nach links und rechts Ziehen, kannst du dir die gesamte Webadresse anschauen.</string>
    <string name="level_02_intro_08_domain_description">Wer-Bereich\n(Gesprächspartner + Standort)</string>
    <string name="level_02_intro_08_subdomain_description">Abteilungen</string>
    <string name="level_03_intro_01_text_01"><b>Zur Erinnerung</b>\n\nDer Bereich zwischen \"http://\" und dem dritten Slash \"/\" gibt dir Informationen über deinen Gesprächspartner, d.h. über die Webseite.\n\nDieser Bereich wird durch Punkte in Blöcke eingeteilt und die Blöcke werden von rechts nach links gelesen.</string>
    <string name="URLs">Korrekt:</string>
    <string name="url">Beispiel URL</string>
    <string name="level_score">Levelpunkte:</string>
    <string name="oversafe_02">Wenn man sich unsicher ist, ist es allerdings besser übervorsichtig zu sein und keine Daten einzugeben. In solchen Fällen ist es sinnvoll, den entsprechenden Gesprächspartner zu kontaktieren und dort nach der Vertrauenswürdigkeit der verdächtigen Webadresse zu fragen. Alternativ kann man den Namen des Gesprächspartners in eine Suchmaschiene eingeben. Die ersten Ergebnisse zeigen wahrscheinlich die richtige Webseite.</string>
    <string name="you_are_correct">Gut gemacht. Diese Webadresse ist nicht gefälscht, ihr kannst du vertrauen.</string>
    <string name="you_found_the_phish">Du hast den Phish erkannt. Herzlichen Glückwunsch.</string>
    <string name="number">10</string>
    <string name="content_desc_i_know_that_btn">Button das kann ich schon</string>
    <string name="content_desc_slide_to_right">Adresse nach rechts schieben</string>
    <string name="content_desc_start_of_address">Angekommen am Anfang der Webadresse</string>
    <string name="content_desc_smiling_face">Lächelndes Gesicht</string>
    <string name="content_desc_life_1">Lebensherz 1</string>
    <string name="content_desc_life_2">Lebensherz 2</string>
    <string name="content_desc_life_3">Lebensherz 3</string>
</resources>