<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/level_01_intro_03_sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fillViewport="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/level_01_intro_03_text_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/level_01_intro_03_text_01"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/level_01_intro_03_image_01"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/website_screenshot_height_xsmall"
            android:layout_below="@+id/level_01_intro_03_text_01"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/content_desc_slide_to_right"
            android:src="@drawable/addr_02" />

        <TextView
            android:id="@+id/level_01_intro_03_text_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_01_intro_03_image_01"
            android:text="@string/level_01_intro_03_text_02"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/level_01_intro_03_image_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_01_intro_03_text_02"
            android:contentDescription="@string/content_desc_start_of_address"
            android:layout_centerHorizontal="true"
            android:src="@drawable/address_03" />

        <TextView
            android:id="@+id/level_01_intro_03_text_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_01_intro_03_image_02"
            android:text="@string/level_01_intro_03_text_03"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</ScrollView>