<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/url_task_check_mark"
    android:layout_alignRight="@+id/url_task_cross"
    android:background="@drawable/background_highlight"
    android:padding="@dimen/padding_score" >

    <TextView
        android:id="@+id/urls_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/URLs"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/urls_delim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/urls"
        android:layout_alignTop="@+id/urls"
        android:layout_toRightOf="@+id/urls"
        android:text="@string/slash"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/urls_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/urls_delim"
        android:layout_alignBottom="@+id/urls_delim"
        android:layout_toRightOf="@+id/urls_delim"
        android:text="@string/number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- total score -->

    <TextView
        android:id="@+id/level_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/urls_text"
        android:text="@string/level_score"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/level_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/level_score_text"
        android:layout_alignBottom="@+id/level_score_text"
        android:layout_toRightOf="@+id/level_score_text"
        android:text="@string/number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Phishes -->

    <TextView
        android:id="@+id/urls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/urls_text"
        android:layout_alignBottom="@+id/urls_text"
        android:layout_marginLeft="@dimen/margin_xxsmall"
        android:layout_toRightOf="@+id/urls_text"
        android:text="@string/number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/time_couter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_toLeftOf="@+id/life_1"
        android:layout_centerVertical="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" 
        android:text="@string/number"/>
    
    <ImageView
        android:id="@+id/life_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_xxxsmall"
        android:layout_toLeftOf="@+id/life_2"
        android:layout_centerVertical="true"
        android:contentDescription="@string/content_desc_life_1"
        android:src="@drawable/heart" />
    
    <ImageView
        android:id="@+id/life_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_xxxsmall"
        android:layout_toLeftOf="@+id/life_3"
        android:layout_centerVertical="true"
        android:contentDescription="@string/content_desc_life_2"
        android:src="@drawable/heart" />
    
    <ImageView
        android:id="@+id/life_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/content_desc_life_3"
        android:src="@drawable/heart" />

</RelativeLayout>