<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_nophish_detected_sv"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadeScrollbars="false" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/result_layout"
        tools:context=".ResultActivity" >

        <include
            android:id="@+id/score_relative"
            layout="@layout/fragment_score" />

        <TextView
            android:id="@+id/result_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxsmall"
            android:layout_below="@id/score_relative"
            android:text="@string/you_are_correct"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <ImageView
            android:id="@+id/result_smiley"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/score_relative"
            android:layout_below="@+id/result_text1"
            android:contentDescription="@string/content_desc_smiling_face"
            android:src="@drawable/small_smiley_smile" />
       
        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result_smiley"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/result_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/result_text1"
            android:layout_below="@+id/url"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/oversafe_02"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </RelativeLayout>

</ScrollView>