<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/level_01_intro_00_sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/level_01_intro_00_text_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/level_01_intro_00_text_01"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/level_01_intro_00_button_01"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_standard_height"
            android:layout_below="@+id/level_01_intro_00_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_large"
            android:contentDescription="@string/content_desc_i_know_that_btn"
            android:minWidth="@dimen/btn_standard_width"
            android:text="@string/level_01_intro_00_button_01"
            android:visibility="invisible" />
    </RelativeLayout>

</ScrollView>